# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  08 Mar 2005; Marius Mauch <genone@gentoo.org> pym/portage.py:
  reverting broken patch for fakedbapi.cp_all(): it returned a nested list 
  instead of a simple list and was weird at best.

  06 Mar 2005; Brian Harring <ferringb@gentoo.org> autogen.sh:
  used for autogenerating auto* crap after a checkout.

  06 Mar 2005; Brian Harring <ferringb@gentoo.org> bin/emerge, pym/portage_dep.py, 
  pym/portage_file.py, pym/portage_util.py, pym/portage.py, pym/config.py, 
  pym/eclass_cache:
  Broke config class out into it's own module.  Minimal hacks, 3 from portage
  imports that can't be gutted till reliance on global db is gone.  Aside 
  from that, shifts of funcs around.
  Also broke eclass_cache out.

  06 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> bin/emerge: Added a check
  to make sure the file exists before working with it, when called with an
  ebuild path. #84102  Fixed the invalid call to isvalidatom() #84144
  Expanded syslist during the unmerge phase so that all packages listed in
  system are correctly checked and warned against.  #83670

  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Fixed a
  var substitution that caused installed virtuals to not be considered.

  02 Mar 2005; Brian Harring <ferringb@gentoo.org> pym/ebuild.py: added a 
  check to force PORTAGE_LOGFILE to have the appropriate owner/perms.

  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage_util.py: Added
  missing bsd_chflags import required after forward porting.

  02 Mar 2005; Jason Stubbs <jstubbs@gentoo.org> pym/portage.py: Added -* to
  FEATURES before saving back to the env after modification.
